dnctest.yaml
apiVersion: apps/v1beta1 #for versions before 1.6.0 use extensions/v1beta1
kind: Deployment
metadata:
  name: dnctest-deploy
  labels:
    app: dnctest-app
spec:
  replicas: 4
  template:
    metadata:
      labels:
        app: dnctest-app
    spec:
      containers:
      - name: dnctest-cnt
        image: <aws-repo-url>/<repo-name>:www-test
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
      imagePullSecrets:
      - name: samreg
---
apiVersion: v1 #for versions before 1.6.0 use extensions/v1beta1
kind: Service
metadata:
  name: dnctest-svc
spec:
  type: LoadBalancer
  ports: 
  - port: 8180 # port internal to the cluster
    nodePort: 31800  # external access
    targetPort: http # port number or name of the container port
    protocol: TCP
  selector: 
    app: dnctest-app
