ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-www-test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: dnctest
    servicePort: 80
